[tool.poetry]
name = "benchmapi"
version = "0.1.0"
description = ""
authors = ["Kostiantyn Ivashchenko <kivaschenko@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.114.2"}
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
pydantic = "^2.9.1"
pytest = "^8.3.3"
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 120
# extend-ignore = E203 W503

[tool.mypy]
python_version = 3.11
# ignore_missing_imports = True
